Add form section

--- a/index.html
+++ b/index.html
@@ -23,5 +23,60 @@
        ACCORDING TO THE DAY THEY WERE BORN IN GHANIAN LANGUAGE.
        THERE ARE MANY DIVERSE THINGS WE ARE LOOKING FORWORD FOR U TO EXPLORE BUT FIRST KINDLY FILL UP THE FORM BELOW INORDER FOR VERIFICATION.
    </p>
+  <div class="container">
+      <!--grid system-->
+      <form>
+      <div class="container" style="background-color: violet;">
+        <div class="row">
+            <div class="col">
+                <label>Names</label>
+                <input>
+               <label>Gender</label>
+               <input>
+            </div>
+
+        </div>
+
+        <br>
+         <DIV
+          <div class="row">
+              <div class="col-sm">
+                 <label>DOB</label>
+                 <input>
+              </div>
+          </div>
+
+              <br>
+
+              <div class="row">
+                  <div class="col">
+                   <label>MONTH</label>
+                   <input>
+                  </div>
+                </div>
+                <br>
+
+               <div class="row">
+                   <div class="col">
+                       <label>YEAR</label>
+                       <input>
+
+                   </div>
+               </div>
+               <br>
+           <button>SUBMIT</button>
+
+                   
+              </div> 
+            
+          </div>
+
+      </div>
+     </form>
+  </div>
+
+
+  <!--link javascipt-->
+  <script type="text/javascript" src="../js/script.js"></script>
 </body>
 </html>
