Add change of date

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          <DIV
           <div class="row">
               <div class="col-sm">
-                 <label>DOB</label>
+                 <label>DAY OF BIRTH</label>
                  <input>
               </div>
           </div>
@@ -64,8 +64,8 @@
                    </div>
                </div>
                <br>
-           <button>SUBMIT</button>
-
+           <button onclick="promptUser">SUBMIT</button>
+ 
                    
               </div> 
             
