Add function to button

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                    </div>
                </div>
                <br>
-           <button>SUBMIT</button>
+           <button onclick="let()">SUBMIT</button>
 
                    
               </div> 
