Add buttons added to the application

--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
 
                <div class="row">
                    <div class="col">
+                       Enter a leap year to find out if its a leap year:<br>
                        <label>YEAR</label>
-                       <input>
+                       <input type="text" id="year"> <br>
+                       <button onclick="find.leapyear()">CHECK OUT</button>  
 
                    </div>
                </div>
                <br>
-           <button onclick="let()">SUBMIT</button>
+           
 
                    
               </div> 
@@ -73,6 +75,7 @@
 
       </div>
      </form>
+     <button onclick="let()">SUBMIT</button>
   </div>
 
 
