--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
    </header> 
    <p>
        GREETINGS AND A WARM WELCOME TO GHANA.GHANA IS LOCATED IN WEST OF AFRICA AS IT BORDERS THE ATLATIC OCEAN TO THE SOUTH AND 
-       NEIGHBORS TOGO AND COTE D'IVOIRE TO THE EAST AND WEST RESPECTIVELY.
+       NEIGHBORS TOGO AND COTE D'IVOIRE TO THE EAST AND WEST RESPECTIVELY.<br>
        AS A COUNTRY WE LOOK FORWARD TO ATTRACT FORENIERS LIKE YOU AND FEEL AT HOME WHEN IN THIS WONDERFUL NATION.
        GHANA AS A COUNTRY IS FULL OF CULTURE AND PEOPLE OF DIVERSE CULTURE.A BRIEF CULTURAL FACT IN GHANA IS THAT PEOPLE ARE NAMED 
-       ACCORDING TO THE DAY THEY WERE BORN IN GHANIAN LANGUAGE.
+       ACCORDING TO THE DAY THEY WERE BORN IN GHANIAN LANGUAGE.<br>
        THERE ARE MANY DIVERSE THINGS WE ARE LOOKING FORWORD FOR U TO EXPLORE BUT FIRST KINDLY FILL UP THE FORM BELOW INORDER FOR VERIFICATION.
    </p>
   <div class="container">
