Add header 2 to form

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <div class="container">
       <!--grid system-->
       <form>
+          <h2>FILL IN THE DETAILS BELOW.</h2>
       <div class="container" style="background-color: violet;">
         <div class="row">
             <div class="col">
