Add change of container color

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
        ACCORDING TO THE DAY THEY WERE BORN IN GHANIAN LANGUAGE.<br>
        THERE ARE MANY DIVERSE THINGS WE ARE LOOKING FORWORD FOR U TO EXPLORE BUT FIRST KINDLY FILL UP THE FORM BELOW INORDER FOR VERIFICATION.
    </p>
-  <div class="container" style="background-color: darkred;">
+  <div class="container" style="background-color: lightcoral;">
       <!--grid system-->
       <form>
           <h2>FILL IN THE DETAILS.</h2>
-      <div class="container" style="background-color: gray;">
+      <div class="container">
         <div class="row">
             <div class="col">
                 <label>Names</label>
