--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             
                <div class="row">
                    <div class="col">
-                       <button onclick="let()">SUBMIT</button>
+                       <button onclick="let()" id="btn1">SUBMIT</button>
 
                    </div>
 
