--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          
           <div class="row">
               <div class="col-sm">
-                 <label>DOB</label>
+                 <label>D.O.B.</label>
                  <input>
               </div>
           </div>
