Add changes to page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
        ACCORDING TO THE DAY THEY WERE BORN IN GHANIAN LANGUAGE.<br>
        THERE ARE MANY DIVERSE THINGS WE ARE LOOKING FORWORD FOR U TO EXPLORE BUT FIRST KINDLY FILL UP THE FORM BELOW INORDER FOR VERIFICATION.
    </p>
+   <p>IN THIS PAGE YOU WILL BE ABLE TO TRANSLAT YOUR DAY OF BIRTH TO GHANA NAMES IRESPECTIVE OF YOUR GENDER.</p>
   <div class="container" style="background-color: lightcoral;">
       <!--grid system-->
       <form>
