--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <div class="row">
             <div class="col">
                 <label>Names</label>
-                <input>
+                <input type="text" id="name">
                <label>Gender</label>
-               <input>
+               <input type="text" id="gender">
             </div>
 
         </div>
@@ -44,7 +44,7 @@
           <div class="row">
               <div class="col-sm">
                  <label>D.O.B.</label>
-                 <input>
+                 <input type="text" id="date">
               </div>
           </div>
 
@@ -53,7 +53,7 @@
               <div class="row">
                   <div class="col">
                    <label>MONTH</label>
-                   <input>
+                   <input type="text" id="month">
                   </div>
                 </div>
                 <br>
