Add deletion of month section

--- a/index.html
+++ b/index.html
@@ -44,19 +44,12 @@
           <div class="row">
               <div class="col-sm">
                  <label>D.O.B.</label>
-                 <input type="text" id="date">
+                 <input type="date" id="birthday">
               </div>
           </div>
 
               <br>
 
-              <div class="row">
-                  <div class="col">
-                   <label>MONTH</label>
-                   <input type="text" id="month">
-                  </div>
-                </div>
-                <br>
 
                <div class="row">
                    <div class="col">
@@ -71,7 +64,7 @@
             
                <div class="row">
                    <div class="col">
-                       <button onclick="let()" id="btn1">SUBMIT</button>
+                       <input type="submit" id="submitted" value="submit">
 
                    </div>
 
