Add addition of onsubmit to form tag

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    <p>IN THIS PAGE YOU WILL BE ABLE TO TRANSLAT YOUR DAY OF BIRTH TO GHANA NAMES IRESPECTIVE OF YOUR GENDER.</p>
   <div class="container" style="background-color: lightcoral;">
       <!--grid system-->
-      <form>
+      <form onsubmit="getBirthday()">
           <h2>FILL IN THE DETAILS.</h2>
       <div class="container">
         <div class="row">
@@ -64,7 +64,7 @@
             
                <div class="row">
                    <div class="col">
-                       <input type="submit" id="submitted" value="submit">
+                       <input id="in1" type="submit" id="submitted" value="submit">
 
                    </div>
 
