--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 <body>
    <header>
@@ -26,7 +27,7 @@
    <p>IN THIS PAGE YOU WILL BE ABLE TO TRANSLAT YOUR DAY OF BIRTH TO GHANA NAMES IRESPECTIVE OF YOUR GENDER.</p>
   <div class="container" style="background-color: lightcoral;">
       <!--grid system-->
-      <form onsubmit="getBirthday()">
+      <form onsubmit="getAkaname()">
           <h2>FILL IN THE DETAILS.</h2>
       <div class="container">
         <div class="row">
