Add change to container

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 <body>
+    <br>
+
     <div class="container" style="background-image: url(assets/people.jpeg)">
    <header>
        <h1>GHANIAN CITIZENSHIP APPLICATION</h1>
@@ -26,7 +28,7 @@
        THERE ARE MANY DIVERSE THINGS WE ARE LOOKING FORWORD FOR U TO EXPLORE BUT FIRST KINDLY FILL UP THE FORM BELOW INORDER FOR VERIFICATION.
    </p>
    <p>IN THIS PAGE YOU WILL BE ABLE TO TRANSLAT YOUR DAY OF BIRTH TO GHANA NAMES IRESPECTIVE OF YOUR GENDER.</p>
-  <div class="container" style="background-color: lightcoral;">
+  <div class="container" style="background-color: cadetblue;">
       <!--grid system-->
       <form onsubmit="getAkaname()">
           <h2>FILL IN THE DETAILS.</h2>
@@ -37,7 +39,7 @@
                 <input type="text" id="name">
                 <div class="radio"></div>
                <label>
-                <input type="radio" name="gender" value="male">
+                <input type="radio" id="gender" value="male">
                 MALE.
                </label>
             </div>
