Add Navigation bar,onclick value

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
              <option value="female">Female</option>
          </select>
          <br>
-         <button onsubmit="getValueAkan()" class="btn btn-primary" id="submit">submit</button>
+         <button onclick="getValueAkan ()" class="btn btn-primary" id="submit">submit</button>
      </form>
   </div>
 </div>
