Add id on button

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
       <!--grid system-->
       <form id="formakan">
         <p id="empty"></p>
-
+         <p class="p">DATE</p>
          <input type="text" name="name" placeholder="enter date" id="date" class="form-control"  type="number">
          <br>
+         <p class="p">MONTH</p>
          <input type="text" name="name" id="month" placeholder="enter month" class="form-control" type="number" >
          <br>
+         <p class="p">YEAR</p>
          <input type="text" name="name" id="year" placeholder="enter year" class="form-control" type="number" >
          <br>
          <label >Select gender</label>
@@ -53,8 +55,9 @@
              <option value="female">Female</option>
          </select>
          <br>
-         <button onclick="getValueAkan()" class="btn btn-primary" id="submit">submit</button>
+         <button onclick="getValueAkan()" class="btn btn-primary" id="myBTN">submit</button>
      </form>
+     <br>
   </div>
 </div>
 
